# secp256k1

./: CMakeLists.txt  README.md
cmake/: FindSecp256k1.cmake
debian/: changelog  control
rockspecs/: secp256k1-scm-1.rockspec
secp256k1/: CMakeLists.txt  init.ffi.old.lua  init.lua  internal.c
